--- a/index.html
+++ b/index.html
@@ -1,26 +1,36 @@
-<head>
-    <script src="jquery-3.6.0.js"></script>
-    <script src='main.js'></script>
-</head>
-<body>
-    <h1>Employee Signup Form</h1>
-    <p id="AjaxTime"></p>
-    <form id='EmpForm' hidden='true'>
-        <p>Enter Your Employee ID:</p>
-        <input id = 'Employee_id' name = 'Eid' type="text">
-        <p>Enter Your Name:</p>
-        <input id = 'Employee_name' name = 'Ename' type="text">
-        <p>Enter Your Basic Salary:</p>
-        <input id = 'Employee_salary' name = 'Esal' type="number">
-        <p>Enter Your HRA:</p>
-        <input id = 'Employee_hra' name = 'Ehra' type="number">
-        <p>Enter Your DA:</p>
-        <input id = 'Employee_da' name = 'Eda' type="number">
-        <p>Enter Your Deductions:</p>
-        <input id = 'Employee_deductions' name = 'Eded' type="number">
-        <br>
-        <br>
-        <input id="submit" type="submit">
-    </form>
-    <button>click to hide/show form</button>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src='main.js'></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body class='container-fluid w-25'>
+        <h1 class='display-3 text-center'>Employee Signup Form</h1>
+        <div class='d-flex row justify-content-center mb-3'>
+            <p class='margin-xs'><strong id="AjaxTime"></strong></p>         
+            <div class="spinner-border text-primary" id='AjaxProgress'></div>
+        </div>
+        <form id='EmpForm' class='jumbotron d-flex flex-column'>
+            <label class='d-flex align-self-center'>Enter Your Employee ID:</label>
+            <input id = 'Employee_id' name = 'Eid' type="text" class="form-control">
+            <label class='d-flex align-self-center'>Enter Your Name:</label>
+            <input id = 'Employee_name' name = 'Ename' type="text" class="form-control">
+            <label class='d-flex align-self-center'>Enter Your Basic Salary:</label>
+            <input id = 'Employee_salary' name = 'Esal' type="number" class="form-control">
+            <label class='d-flex align-self-center'>Enter Your HRA:</label>
+            <input id = 'Employee_hra' name = 'Ehra' type="number" class="form-control">
+            <label class='d-flex align-self-center'>Enter Your DA:</label>
+            <input id = 'Employee_da' name = 'Eda' type="number" class="form-control">
+            <label class='d-flex align-self-center'>Enter Your Deductions:</label>
+            <input id = 'Employee_deductions' name = 'Eded' type="number" class="form-control">
+            <br>
+            <br>
+            <input id="submit" type="submit" class='btn btn-primary'>
+        </form>
+    </body>
+</html>
