--- a/index.html
+++ b/index.html
@@ -9,28 +9,42 @@
         <script src='main.js'></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
-    <body class='container-fluid w-25'>
-        <h1 class='display-3 text-center'>Employee Signup Form</h1>
-        <div class='d-flex row justify-content-center mb-3'>
-            <p class='margin-xs'><strong id="AjaxTime"></strong></p>         
-            <div class="spinner-border text-primary" id='AjaxProgress'></div>
+    <body>
+        <div class='jumbotron pt-2 pb-4'>
+            <h1 class='display-3 text-center'>Employee Signup Form</h1>
         </div>
-        <form id='EmpForm' class='jumbotron d-flex flex-column'>
-            <label class='d-flex align-self-center'>Enter Your Employee ID:</label>
-            <input id = 'Employee_id' name = 'Eid' type="text" class="form-control">
-            <label class='d-flex align-self-center'>Enter Your Name:</label>
-            <input id = 'Employee_name' name = 'Ename' type="text" class="form-control">
-            <label class='d-flex align-self-center'>Enter Your Basic Salary:</label>
-            <input id = 'Employee_salary' name = 'Esal' type="number" class="form-control">
-            <label class='d-flex align-self-center'>Enter Your HRA:</label>
-            <input id = 'Employee_hra' name = 'Ehra' type="number" class="form-control">
-            <label class='d-flex align-self-center'>Enter Your DA:</label>
-            <input id = 'Employee_da' name = 'Eda' type="number" class="form-control">
-            <label class='d-flex align-self-center'>Enter Your Deductions:</label>
-            <input id = 'Employee_deductions' name = 'Eded' type="number" class="form-control">
-            <br>
-            <br>
-            <input id="submit" type="submit" class='btn btn-primary'>
-        </form>
+        <div class='container w-md'>
+            <form id='EmpForm'>
+                <div class="row">
+                    <div class='col-sm-3'></div>
+                    <div class='col-sm-6 pb-3 bg-white shadow-lg rounded pt-3'>
+                        <label class='d-flex align-self-center'><strong>Your Employee ID:</strong></label>
+                        <input id = 'Employee_id' name = 'Eid' type="text" class="form-control" autofocus="autofocus">
+                        <label class='d-flex align-self-center'><strong>Enter Your Name:</strong></label>
+                        <input id = 'Employee_name' name = 'Ename' type="text" class="form-control">
+                        <label class='d-flex align-self-center'><strong>Enter Your Basic Salary:</strong></label>
+                        <input id = 'Employee_salary' name = 'Esal' type="number" class="form-control">
+                        <label class='d-flex align-self-center'><strong>Enter Your HRA:</strong></label>
+                        <input id = 'Employee_hra' name = 'Ehra' type="number" class="form-control">
+                        <label class='d-flex align-self-center'><strong>Enter Your DA:</strong></label>
+                        <input id = 'Employee_da' name = 'Eda' type="number" class="form-control">
+                        <label class='d-flex align-self-center'><strong>Enter Your Deductions:</strong></label>
+                        <input id = 'Employee_deductions' name = 'Eded' type="number" class="form-control">     
+                        <br>
+                        <br>
+                        <div class='row'>
+                            <div class='col-sm-2 '></div>
+                            <button id = "change" class='btn btn-primary col-sm-2 shadow'>Change</button>
+                            <div class='col-sm-1 '></div>
+                            <button id = "save" class='btn btn-primary col-sm-2 shadow'>Save</button>
+                            <div class='col-sm-1 '></div>
+                            <button id = "reset" class='btn btn-primary col-sm-2 shadow'>Reset</button>
+                            <div class='col-sm-2 '></div>
+                        </div>           
+                    </div>
+                    <div class='col-sm-3'></div>
+                </div>
+            </form>        
+        </div>
     </body>
 </html>
