--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 class='display-3 text-center'>Employee Signup Form</h1>
         </div>
         <div class='container w-md'>
-            <form id='EmpForm' action="http://127.0.0.1:5000/api/AddData" method="get">
+            <form id='EmpForm' action="https://vast-springs-43279.herokuapp.com/api/AddData" method="get">
                 <div class="row">
                     <div class='col-sm-3'></div>
                     <div class='col-sm-6 pb-3 bg-white shadow-lg rounded pt-3'>
