--- a/result.html
+++ b/result.html
@@ -1,2 +1,2 @@
 <h1>{{state}}</h1>
-<button><a href='http://127.0.0.1:5000/'>Click Me To Return!</a></button>
+<button><a href='https://vast-springs-43279.herokuapp.com/'>Click Me To Return!</a></button>
